[tool.poetry]
name = "gscholar-citation-analyzer"
version = "0.1.0"
description = ""
authors = ["Maxime Puys <drakes00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scholarly = "^1.7.11"
tqdm = "^4.66.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
